# LinuxCommunication

./: Docker.sh  DockerGuide.txt  DockerGuide_coredump.txt  README.md  boost_install.sh  boost_install_1_64_ubuntu16.sh  boost_install_1_79_ubuntu18.sh  coredumpSetup.sh
DockerFile/: Dockerfile
GymGhostWordCom/: CMakeLists.txt  client_MQ.py  client_test.py  consoul.txt  setup.py  terminal.out
GymGhostWordCom/ClientMQPkg.egg-info/: SOURCES.txt
GymGhostWordCom/include/Com/: Com.h  msg.h
GymGhostWordCom/logs/: client_MQ71e270aa-d823-4845-9b57-faea4c5deec5.txt
GymGhostWordCom/pyclientMQ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GymGhostWordCom/pyserverMQ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GymGhostWordCom/scripts/: client_MQ.py  server_MQ.py
GymGhostWordCom/scripts/logs/: client_MQ05269756-cae7-4f35-a8ef-46986d483570.txt  client_MQa8fc6507-14af-492e-8ef8-cf2e237aa2a4.txt  client_MQaf8d4fbf-d37d-4a68-82cd-73650145f914.txt
GymGhostWordCom/src/: Com.cpp  client.cpp  client_MQ.cpp  client_MQ.py  client_com_pybind.cpp  client_com_wrapper.cpp  consoul.txt  msg.cpp  server.cpp  server_MQ.cpp  server_com_pybind.cpp
GymGhostWordCom/src/ClientMQPkg.egg-info/: PKG-INFO  SOURCES.txt
GymGhostWordCom/unit_test/: CMakeLists.txt  Guide.txt  GunitTest.cpp  GunitTest_MQ.cpp  unitTest_MQ.cpp
